5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1674_1879.log
== TEST (2019-05-01 20:06:49) 
-- CODE:
x = float(input("quantidade de horas extras: "))
y = float(input("quantidade de horas que ele(a) faltou: "))

H = x - (1/4 * y)

if("H" > 400):
	p = "H" + 500
	print(x, "extras", "e", y, "de falta")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if("H" > 400):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:07:11) 
-- CODE:
x = float(input("quantidade de horas extras: "))
y = float(input("quantidade de horas que ele(a) faltou: "))

H = x - (1/4 * y)

if(H > 400):
	p = "H" + 500
	print(x, "extras", "e", y, "de falta")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    p = "H" + 500
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:07:20) 
-- CODE:
x = float(input("quantidade de horas extras: "))
y = float(input("quantidade de horas que ele(a) faltou: "))

H = x - (1/4 * y)

if(H > 400):
	p = "H" + 500
	print(x, "extras", "e", y, "de falta")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    p = "H" + 500
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:07:28) 
-- CODE:
x = float(input("quantidade de horas extras: "))
y = float(input("quantidade de horas que ele(a) faltou: "))

H = x - (1/4 * y)

if(H > 400):
	p = "H" + 500
	print(x, "extras", "e", y, "de falta")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    p = "H" + 500
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:14:02) 
-- CODE:
x = float(input("quantidade de horas extras: "))
y = float(input("quantidade de horas que ele(a) faltou: "))
print(x, "extras", "e", y, "de falta")
	
H = x - (1/4 * y)
r = round(H, 2)

if(r > 400):
	p = r + 500
	print("R$", p)
elif(r <= 400)
	p = r + 100
	print("R$", p)	
	
-- ERROR:
File "XXXX", line 11
    elif(r <= 400)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:14:12) 
-- CODE:
x = float(input("quantidade de horas extras: "))
y = float(input("quantidade de horas que ele(a) faltou: "))
print(x, "extras", "e", y, "de falta")
	
H = x - (1/4 * y)
r = round(H, 2)

if(r > 400):
	p = r + 500
	print("R$", p)
elif(r <= 400):
	p = r + 100
	print("R$", p)	
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 915.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:14:53) 
-- CODE:
x = float(input("quantidade de horas extras: "))
y = float(input("quantidade de horas que ele(a) faltou: "))
print(x, "extras", "e", y, "de falta")
	
H = x - (1/4 * y)
r = round(H, 2)

if(r > 400):
	p = r + 500
	print("R$", 500)
elif(r <= 400):
	p = r + 100
	print("R$", 100)	
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:15:48) 
-- CODE:
x = float(input("quantidade de horas extras: "))
y = float(input("quantidade de horas que ele(a) faltou: "))
print(x, "extras", "e", y, "de falta")
	
H = x - (1/4 * y)
r = round(H, 2)

if(r > 400):
	print("R$", 500.0)
else:
	print("R$", 100.0)	
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:16:02) 
-- CODE:
x = float(input("quantidade de horas extras: "))
y = float(input("quantidade de horas que ele(a) faltou: "))
print(x, "extras", "e", y, "de falta")
	
H = x - (1/4 * y)
r = round(H, 2)

if(r > 400):
	print("R$", 500.0)
else:
	print("R$", 100.0)	
	
-- EXECUTION TIME:
0.13461
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
